Added interfaces and models for the oxap account and endpoint handling
