# middleware/swagger_server/swagger/swagger.yaml
@@ -29,6 +29,10 @@ tags:
   description: "Open-Xchange App Suite Environment"
 - name: "oxapaccount"
   description: "The Open-Xchange Admin Panel Account"
+- name: "endpoint"
+  description: "An Endpoint Configuration for an OXAP Account"
+- name: "endpointinterface"
+  description: "An Interface Configuration for an OXAP Account Endpoint"
 schemes:
 - "http"
 - "https"
@@ -303,7 +307,7 @@ paths:
       tags:
       - "oxapaccount"
       summary: "Get Account Information"
-      description: "Get Account Information of the Open-Xchange Admin Panel Account"
+      description: "Get account information of the Open-Xchange Admin Panel account"
       operationId: "get_oxap_account"
       consumes:
       - "application/json"
@@ -315,6 +319,119 @@ paths:
           description: "Successful Operation"
       security: []
       x-swagger-router-controller: "swagger_server.controllers.oxapaccount_controller"
+  /oxap/account/endpoint:
+    get:
+      tags:
+      - "endpoint"
+      summary: "Get all Endpoints"
+      description: "Get all endpoints of the Open-Xchange Admin Panel account"
+      operationId: "get_oxap_account_endpoints"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters: []
+      responses:
+        200:
+          description: "Successful Operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/Endpoint"
+      security: []
+      x-swagger-router-controller: "swagger_server.controllers.endpoint_controller"
+  /oxap/account/endpoint/{endpointId}:
+    get:
+      tags:
+      - "endpoint"
+      summary: "Find endpoint by ID"
+      description: "Find endpoint within the given Open-Xchange Admin Panel account"
+      operationId: "get_endpoint_by_id"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "endpointId"
+        in: "path"
+        description: "Id of the Open-Xchange Admin Panel Account endpoint object to\
+          \ find within the given account"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "Successful Operation"
+          schema:
+            $ref: "#/definitions/Endpoint"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Object not found"
+      security: []
+      x-swagger-router-controller: "swagger_server.controllers.endpoint_controller"
+  /oxap/account/endpoint/{endpointId}/endpointinterface:
+    get:
+      tags:
+      - "endpointinterface"
+      summary: "Get all interfaces"
+      description: "Get all interfaces of an Open-Xchange Admin Panel account endpoint"
+      operationId: "get_oxap_account_endpoint_interfaces"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "endpointId"
+        in: "path"
+        description: "Id of the Open-Xchange Admin Panel Account endpoint object to\
+          \ find within the given account"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "Successful Operation"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/EndpointInterface"
+      security: []
+      x-swagger-router-controller: "swagger_server.controllers.endpointinterface_controller"
+  /oxap/account/endpoint/{endpointId}/endpointinterface/{endpointInterfaceId}:
+    get:
+      tags:
+      - "endpointinterface"
+      summary: "Find endpoint interface by ID"
+      description: "Find endpoint interface within the given Open-Xchange Admin Panel\
+        \ account endpoint"
+      operationId: "get_endpoint_interface_by_id"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "endpointId"
+        in: "path"
+        description: "Id of the Open-Xchange Admin Panel Account endpoint object to\
+          \ find within the given account"
+        required: true
+        type: "integer"
+        format: "int64"
+      - name: "endpointInterfaceId"
+        in: "path"
+        description: "Id of the Open-Xchange Admin Panel account endpoint interface\
+          \ object to find within the given endpoint"
+        required: true
+        type: "integer"
+        format: "int64"
+      responses:
+        200:
+          description: "Successful Operation"
+          schema:
+            $ref: "#/definitions/EndpointInterface"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Object not found"
+      security: []
+      x-swagger-router-controller: "swagger_server.controllers.endpointinterface_controller"
 definitions:
   Group:
     type: "object"
@@ -1057,6 +1174,8 @@ definitions:
         type: "string"
   OXAPAccount:
     type: "object"
+    required:
+    - "name"
     properties:
       id:
         type: "integer"
@@ -1065,6 +1184,64 @@ definitions:
       name:
         type: "string"
         description: ""
+      description:
+        type: "string"
+        description: ""
+  Endpoint:
+    type: "object"
+    required:
+    - "interface"
+    - "name"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+        description: ""
+      name:
+        type: "string"
+        description: ""
+      description:
+        type: "string"
+        description: ""
+      interface:
+        type: "array"
+        items:
+          $ref: "#/definitions/EndpointInterface"
+  EndpointInterface:
+    type: "object"
+    required:
+    - "name"
+    - "type"
+    properties:
+      id:
+        type: "integer"
+        format: "int64"
+      name:
+        type: "string"
+        description: ""
+      description:
+        type: "string"
+        description: ""
+      location:
+        type: "string"
+        description: "The url / address / location of the endpoint interface"
+      password:
+        type: "string"
+        description: ""
+      type:
+        type: "string"
+        description: "\"Endpoint Interface Type\": * appsuite-soap - The App Suite\
+          \ SOAP API Endpoint * dovecot-ldap-dovecotMailboxUid - The Dovecot LDAP\
+          \ Endpoint for Mailbox Information * dovecot-ldap-dovecotMailPrimaryAddress\
+          \ - The Dovecot LDAP Endpoint for Primary Mail Address Information * dovecot-ldap-dovecotMailAliasAddress\
+          \ - The Dovecot LDAP Endpoint for Alias Information * dovecot-ldap-dovecotUserQuotaStorage\
+          \ - The Dovecot LDAP Endpoint for Quota Information\n"
+        enum:
+        - "appsuite-soap"
+        - "dovecot-ldap-dovecotMailboxUid"
+        - "dovecot-ldap-dovecotMailPrimaryAddress"
+        - "dovecot-ldap-dovecotMailAliasAddress"
+        - "dovecot-ldap-dovecotUserQuotaStorage"
   ApiResponse:
     type: "object"
     properties:
